[toolbars-new] fix: alignment-modal mobile icons size (#2973)

--- a/packages/toolbars-new/web/src/modals/panels/styles.scss
+++ b/packages/toolbars-new/web/src/modals/panels/styles.scss
@@ -184,12 +184,9 @@
   align-items: center;
   height: 100%;
   :nth-child(1) {
-    max-width: 20px;
+    max-width: 12px;
     display: inherit;
     align-items: center;
-    > {
-      width: 20px;
-    }
   }
 }
 
